standardized_project_pages_and_added_missing_elements

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   </div>
                   <div class="col-6 col-sm">
                     <a href="projects/netic.html">
-                        <img src="assets/img/neomotion rect.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        <img src="assets/img/neomotion rect.svg" class="project-tile" alt="Netic Health" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
                   </div>
                 </div>
