--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="d-flex flex-grow-1">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/logo.svg" width="65" height="65" class="d-inline-block align-top" alt="Invention Corps Logo">
+                    <img src="../assets/img/logo.svg" width="55" height="55" class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -102,7 +102,7 @@
               <div class="row">
                   <div class="col-3">
                       <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #E06B65;">team</u></h3>
+                      id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
                   </div>
                   <div class="col-9" style="font-style: normal;">
                       <div class="team-container">
@@ -157,7 +157,7 @@
                 <div class="row">
                   <div class="col-3">
                       <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #FFFF99;">background</u></h3>
+                      id="team-header"><u style="border-bottom: 10px solid #E06B65;">background</u></h3>
                   </div>
                     <div class="col-9" style="font-style: normal;">
                       <p> Alemany Farm is a nonprofit urban farm that focused on helping alleviate food deserts and lack of access to nutritious produce. One of the issues that they faced was tracking and documenting the various tasks completed by their volunteers within the orchards around the farm. Invention Corps members were tasked with finding and designing a solution on how track these activities. </p>
@@ -174,7 +174,7 @@
                 <div class="row">
                   <div class="col-3">
                       <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #99CC99;">empathize</u></h3>
+                      id="team-header"><u style="border-bottom: 10px solid #FFFF99;">empathize</u></h3>
                   </div>
                     <div class="col-9" style="font-style: normal;">
                       <p> Our team first began our design process by traveling to the farm to interview the users in order to gain a better perspective on their pain points. We learned that Alemany Farm were using a simple map and numbering system to locate trees, with no universal method for documenting what they had done for the day. This meant that other volunteers would often repeat treatments, miss certain trees, and couldn’t communicate with volunteers from other shifts. </p>
@@ -194,7 +194,7 @@
                 <div class="row">
                   <div class="col-3">
                       <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #99CCFF;">ideate</u></h3>
+                      id="team-header"><u style="border-bottom: 10px solid #99CC99;">ideate</u></h3>
                   </div>
                     <div class="col-9" style="font-style: normal;">
                       <p> After some discussion, we determined that an app was the best way to solve their issue. The majority, if not all, of the volunteers at Alemany Farm had an iPhone, so we decided to wireframe a design for an iOS app. We wanted to keep in mind the setting that they would be utilizing the app in and opted for faster inputs using an interface composed of buttons. </p>
@@ -228,7 +228,7 @@
                 <div class="row">
                   <div class="col-3">
                       <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #E06B65;">prototype</u></h3>
+                      id="team-header"><u style="border-bottom: 10px solid #99CCFF;">prototype</u></h3>
                   </div>
                     <div class="col-9" style="font-style: normal;">
                       <p> We worked collaboratively on a single wireframe, with each one of us adding pages that we were assigned and then tying them together into one cohesive project. Thanks to the consistent communication of our mentors, we were able to generate feedback and reiterate multiple times to continue to optimize our designs.</p>
@@ -275,7 +275,7 @@
                 <div class="row">
                   <div class="col-3">
                       <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #FFFF99;">solution</u></h3>
+                      id="team-header"><u style="border-bottom: 10px solid #E06B65;">solution</u></h3>
                   </div>
                     <div class="col-9" style="font-style: normal;">
                       <p> We decided to create an iOS app that had the functionality the Alemany Farm team would need while working to take care of the orchards. When determining the features of the app, we wanted to keep in mind the environment that the app would be utilized within. This means the app should quickly accessible as well as easily navigated after the care for each tree was completed. Efficiency and ease of use was key. </p>
@@ -301,7 +301,7 @@
                 <div class="row">
                   <div class="col-3">
                       <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #99CC99;">next steps</u></h3>
+                      id="team-header"><u style="border-bottom: 10px solid #FFFF99;">next steps</u></h3>
                   </div>
                     <div class="col-9" style="font-style: normal;">
                       <p> From our dear project lead Kaylan:</p>
@@ -317,7 +317,7 @@
                 <div class="row">
                   <div class="col-3">
                       <h3 style="text-align: center;"
-                      id="team-header"><u style="border-bottom: 10px solid #99CCFF;">thank you</u></h3>
+                      id="team-header"><u style="border-bottom: 10px solid #99CC99;">thank you</u></h3>
                   </div>
                     <div class="col-9" style="font-style: normal;">
                         <p>
