--- a/projects/berkeley-student-food-collective.html
+++ b/projects/berkeley-student-food-collective.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="d-flex flex-grow-1">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/logo.svg" width="65" height="65"
+                    <img src="../assets/img/logo.svg" width="55" height="55"
                     class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
@@ -72,7 +72,7 @@
         <h2>Berkeley Student Food Collective</h2>
         <p class="project" style="text-align: center; padding-bottom: 10px;
         padding-top: 10px;">
-            lorem ipsum
+            To address structural issues acknowledged by the Berkeley Student Food Collective, our team set out to understand and shift elements of the organization to make it more representative of the campus student body and increase value for members of the Collective.
         </p>
         <div class="project-overview-container">
             <div class="row">
@@ -120,7 +120,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <h3 style="text-align: center;"
-                    id="team-header">team</h3>
+                    id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
                 </div>
                 <div class="col-lg-9" style="font-style: normal;">
                     <div class="team-container">
@@ -166,7 +166,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <h3 style="text-align: center;" 
-                    id="background-header">background</h3>
+                    id="background-header"><u style="border-bottom: 10px solid #E06B65;">background</u></h3>
                 </div>
                 <div class="col-lg-9" style="font-style: normal;">
                     <p>
@@ -202,7 +202,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <h3 style="text-align: center;"
-                    id="define-header">define</h3>
+                    id="define-header"><u style="border-bottom: 10px solid #FFFF99;">define</u></h3>
                 </div>
                 <div class="col-lg-9" style="font-style: normal;">
                     <p>
@@ -255,7 +255,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <h3 style="text-align: center;"
-                    id="ideate-header">ideate</h3>
+                    id="ideate-header"><u style="border-bottom: 10px solid #99CC99;">ideate</u></h3>
                 </div>
                 <div class="col-lg-9" style="font-style: normal;">
                     <p>
@@ -297,7 +297,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <h3 style="text-align: center;"
-                    id="initiate-header">initiate</h3>
+                    id="initiate-header"><u style="border-bottom: 10px solid #99CCFF;">initiate</u></h3>
                 </div>
                 <div class="col-lg-9" style="font-style: normal;">
                     <h4>Literature Review</h4>
@@ -569,7 +569,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <h3 style="text-align: center;"
-                    id="conclusion-header">recap & conclusion</h3>
+                    id="conclusion-header"><u style="border-bottom: 10px solid #E06B65;">conclusion</u></h3>
                 </div>
                 <div class="col-lg-9" style="font-style: normal;">
                     <p>
@@ -625,7 +625,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <h3 style="text-align: center;"
-                    id="next-steps-header">thank you's</h3>
+                    id="next-steps-header"><u style="border-bottom: 10px solid #FFFF99;">thank you</u></h3>
                 </div>
                 <div class="col-lg-9" style="font-style: normal;">
                     <p>
