--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="d-flex flex-grow-1">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/logo.svg" width="65" height="65"
+                    <img src="../assets/img/logo.svg" width="55" height="55"
                     class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
@@ -73,6 +73,7 @@
             <h2>Community Cafe</h2>
             <p class="project" style="text-align: center; padding-bottom: 10px;
             padding-top: 10px;">
+            With the big-picture aim of creating avenues to relieve food-insecure students on UC Berkeley's campus, our team partnered with Cal Dining to pilot new initiatives with sustainable resources and a strong brand identity in order to best engage and educate students about food insecurity.
             </p>
             <div class="project-overview-container">
                 <div class="row">
@@ -232,7 +233,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <h3 style="text-align: center;"
-                        id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">community engagement</u></h3>
+                        id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">engagement</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
                         <h4 style="font-style:italic;">How might we engage with the Berkeley community and spread 
@@ -419,7 +420,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <h3 style="text-align: center;"
-                        id="thank-you-header"><u style="border-bottom: 10px solid #FFFF99;">thank you</u></h3>
+                        id="thank-you-header"><u style="border-bottom: 10px solid #E06B65;">thank you</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
                         <p>
