--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="d-flex flex-grow-1">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/logo.svg" width="65" height="65"
+                    <img src="../assets/img/logo.svg" width="55" height="55"
                     class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
@@ -75,18 +75,7 @@
             </div>
             <p class="project" style="text-align: center; padding-bottom: 10px;
             padding-top: 10px;">
-                We are team groupsource! For our project, we wanted
-                to tackle the problem of students' being unprepared
-                for the work world due to the lack of real world and
-                relevant experience. Throughout this semester we
-                were able to work alongside our mentors James
-                Hamilton and Riley Campbell. During this project we
-                conducted user interviews, created personas,
-                ideated, and prototyped to make gaining relevant
-                experience more accessible to students. We created
-                high fidelity wireframes and a pilot program for a
-                platform that connects students with relevant,
-                impactful projects. 
+                To tackle the problem of students being unprepared to enter the work force due to a lack of real-world knowledge, we tried to make gaining relevant experience more accessible to students. We created high-fidelity wireframes and a pilot program for a platform that connects students with focused, impactful projects. 
             </p>
             <div class="project-overview-container">
                 <div class="row">
@@ -364,7 +353,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <h3 style="text-align: center;"
-                        id="strategy-team-header"><u style="border-bottom: 10px solid #E06B65;">strategy team</u></h3>
+                        id="strategy-team-header"><u style="border-bottom: 10px solid #E06B65;">strategy</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
                         <h4>About</h4>
@@ -477,7 +466,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <h3 style="text-align: center;"
-                        id="ui-team-header"><u style="border-bottom: 10px solid #FFFF99;">user interface team</u></h3>
+                        id="ui-team-header"><u style="border-bottom: 10px solid #FFFF99;">user interface</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
                         <h4>About</h4>
