--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="d-flex flex-grow-1">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/logo.svg" width="65" height="65"
+                    <img src="../assets/img/logo.svg" width="55" height="55"
                     class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
@@ -333,7 +333,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="next-steps-header"><u style="border-bottom: 10px solid #99CC99;">reflection & next steps</u></h3>
+                        id="next-steps-header"><u style="border-bottom: 10px solid #99CC99;">next steps</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <p>
