--- a/projects/netic.html
+++ b/projects/netic.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="d-flex flex-grow-1">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/logo.svg" width="65" height="65"
+                    <img src="../assets/img/logo.svg" width="55" height="55"
                     class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
@@ -75,7 +75,7 @@
             </div>
 
 
-            <p class="project" style="text-align: center; padding-bottom: 10px; padding-top: 10px;">
+            <p class="project" style="text-align: center; padding-bottom: 10px;">
               Our project was to design a better experience for physical therapy patients. More specifically, we did so by designing the user interface, establishing the brand identity, and developing the ML. </p>
             <div class="project-overview-container">
                 <div class="row">
@@ -186,7 +186,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="background-header"><u style="border-bottom: 10px solid #FFFF99;">background</u></h3>
+                        id="background-header"><u style="border-bottom: 10px solid #E06B65;">background</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <p>
@@ -202,7 +202,7 @@
                 <div class="row">
                     <div class="col-3">
                       <h3 style="text-align: center;"
-                      id="empathize-header"><u style="border-bottom: 10px solid #99CC99;">empathize</u></h3>
+                      id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">empathize</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <h6> Pain Points: </h6>
@@ -224,7 +224,7 @@
                 <div class="row">
                     <div class="col-3">
                       <h3 style="text-align: center;"
-                        id="define-header"><u style="border-bottom: 10px solid #99CCFF;">define</u></h3>
+                        id="define-header"><u style="border-bottom: 10px solid #99CC99;">define</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                       <p>Some questions we asked when designing: </p>
@@ -247,7 +247,7 @@
                 <div class="row">
                     <div class="col-3">
                       <h3 style="text-align: center;"
-                        id="ideate-header"><u style="border-bottom: 10px solid #E06B65;">ideate</u></h3>
+                        id="ideate-header"><u style="border-bottom: 10px solid #99CCFF;">ideate</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                       <p> We determined that the following features would help address all our users’ needs:</p>
@@ -308,7 +308,7 @@
                 <div class="row">
                     <div class="col-3">
                       <h3 style="text-align: center;"
-                        id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">prototype</u></h3>
+                        id="empathize-header"><u style="border-bottom: 10px solid #E06B65;">prototype</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                       <p>Our App is composed of three key elements: tracking your health for each exercise, connecting to a PT and friendly competition with friends. </p>
@@ -329,7 +329,7 @@
                 <div class="row">
                     <div class="col-3">
                       <h3 style="text-align: center;"
-                        id="empathize-header"><u style="border-bottom: 10px solid #99CC99;">test</u></h3>
+                        id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">test</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                       <h5> Our main goal of user testing was to get feedback on our choices that we made while creating the app. </h5>
@@ -350,7 +350,7 @@
                 <div class="row">
                     <div class="col-3">
                       <h3 style="text-align: center;"
-                        id="empathize-header"><u style="border-bottom: 10px solid #99CCFF;">technical details</u></h3>
+                        id="empathize-header"><u style="border-bottom: 10px solid #99CC99;">technical details</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                       <p>For our app to function properly, it must be able to identify user poses with high accuracy and precision in realtime without access to ground truth background or camera location. The only plausible way to do this is machine learning, meaning that working with the Netic Tech Team, we needed to create models to learn both camera parameters and user poses with only a series of images as inputs. In pursuit of this goal, we reviewed, learned, and implemented the basics of pose estimation via an algorithm that roughly follows the guidelines outlined in [KKA], using Python and TensorFlow for most of the heavy lifting. </p>
@@ -366,7 +366,7 @@
                 <div class="row">
                     <div class="col-3">
                       <h3 style="text-align: center;"
-                        id="empathize-header"><u style="border-bottom: 10px solid #FFFF99;">solution</u></h3>
+                        id="empathize-header"><u style="border-bottom: 10px solid #99CCFF;">solution</u></h3>
                       </div>
                       <div class="col-9" style="font-style: normal;">
                         <p> Our Netic Health prototype went through various iterations before getting to its final form. Due to the fluctuating nature of the current situation and that of the startup process, we went through various changes during the semester. Starting with the name itself, what was once NeoMotion AI became Netic Health. Moreover, though at first the platform was solely a place to help patients who needed help with physical therapy, unrelated to any medical entity, the coronavirus pandemic showed the need for having a medical professional at hand and gave us an insight into the growth that we will most likely experience in the Telemedicine Industry in the coming months and years. Another feature introduced throughout the process was the idea of adding some sort of social gamification to the platform so as to make it more appealing for patients to follow-up on their treatment by encouraging healthy competition.  </p>
@@ -416,7 +416,7 @@
                 <div class="row">
                     <div class="col-3">
                       <h3 style="text-align: center;"
-                        id="empathize-header"><u style="border-bottom: 10px solid #99CCFF;">next steps</u></h3>
+                        id="empathize-header"><u style="border-bottom: 10px solid #E06B65;">next steps</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                       <p>During these past weeks we developed a User Testing system using a simple questionnaire which we delivered to some people so that they could input their feedback. The next steps for this project would be to continue this collection of data, and then go over the feedback and adjust any last details before creating the platform itself.  </p>
@@ -431,7 +431,7 @@
                 <div class="row">
                     <div class="col-3">
                         <h3 style="text-align: center;"
-                        id="next-steps-header"><u style="border-bottom: 10px solid #E06B65;">thank you</u></h3>
+                        id="next-steps-header"><u style="border-bottom: 10px solid #FFFF99;">thank you</u></h3>
                     </div>
                     <div class="col-9" style="font-style: normal;">
                         <p>
