added 'about' graphic

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </p>
         </div>
         <div class="container">
-          <img src="assets/img/four-pillars.svg" class="about-img" alt="Four Pillars">
+          <img src="assets/img/four-pillars2.svg" alt="Four Pillars">
         </div>
     </section>
 
