added titles to the our project page

--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
         <div class="container">
             <h2>Inventing a better tomorrow</h2>
             <p>
-                Hi there! We are <strong>Invention Corps of Berkeley</strong>. We are an interdisciplinary group of students driven to create meaningful global change through human-centered design. We partner with people and organizations who are interested in creating solutions in the realms of society, health, poverty, and the environment. 
+                Hi there! We are <strong>Invention Corps of Berkeley</strong>. We are an interdisciplinary group of students driven to create meaningful global change through human-centered design. We partner with people and organizations who are interested in creating solutions in the realms of society, health, poverty, and the environment.
             </p>
             <p>
                 Our club hosts a semesterly showcase to share the work we have done on our projects typically with presentations and live demos. This semester, we present our <strong>Virtual Showcase</strong>. Our theme this semester is <i>String Theory</i>. As the pandemic has forced many of us apart, we were inspired by the natural forces keeping us together, which you'll see our interpretations of throughout the website.           </p>
             <p>
-                To adapt our tradition of creating a large-scale physical art piece, we were challenged to reimagine something virtually collaborative and engaging. Deriving inspiration from the idea of the necessary and inevitable reaction of particles, we created a structure of interacting, free-form 'blobs'. Each blob was designed individually by each of our amazingly unique members, visually created as a representation of themselves and the color that represents them. In its truest form, this art piece represents how multi-faceted each member is, and how we all can embrace our differences and come together to create a beautiful tapestry of color. We hope you enjoy exploring <i>String Theory</i> and browsing through our project gallery.           
+                To adapt our tradition of creating a large-scale physical art piece, we were challenged to reimagine something virtually collaborative and engaging. Deriving inspiration from the idea of the necessary and inevitable reaction of particles, we created a structure of interacting, free-form 'blobs'. Each blob was designed individually by each of our amazingly unique members, visually created as a representation of themselves and the color that represents them. In its truest form, this art piece represents how multi-faceted each member is, and how we all can embrace our differences and come together to create a beautiful tapestry of color. We hope you enjoy exploring <i>String Theory</i> and browsing through our project gallery.
             </p>
             <p>
                 Love, <br>The Showcase Squad, Spring 2020</br>
             </p>
-            
+
         </div>
     </section>
 
@@ -91,16 +91,19 @@
                   <div class="col-6 col-sm">
                     <a href="projects/alemany-farms.html">
                         <img src="assets/img/alemany farm rect.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);" alt="Alemany Farm">
+                        <div class="proj-title">alemany farm</div>
                     </a>
                   </div>
                   <div class="col-6 col-sm">
                     <a href="projects/communitycafe.html">
                         <img src="assets/img/community cafe final.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        <div class="proj-title">community cafe</div>
                     </a>
                   </div>
                   <div class="col-6 col-sm">
                     <a href="projects/netic.html">
                         <img src="assets/img/neomotion rect.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        <div class="proj-title">netic health</div>
                     </a>
                   </div>
                 </div>
@@ -109,16 +112,19 @@
                         <a href="projects/berkeley-student-food-collective.html">
                             <img src="assets/img/berkeley-food-icon (1)-01.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
                             alt="Berkeley Student Food Collective">
+                            <div class="proj-title">berkeley student food collective</div>
                         </a>
                     </div>
                     <div class="col-sm">
                         <a href="projects/makerspace.html">
                             <img src="assets/img/makerspace-icon (1)-01.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                            <div class="proj-title">moffit makerspace</div>
                         </a>
                     </div>
                     <div class="col-sm">
                         <a href="projects/groupsource.html">
                             <img src="assets/img/groupsource-icon-01.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                            <div class="proj-title">groupsource</div>
                         </a>
                     </div>
                 </div>
