--- a/index.html
+++ b/index.html
@@ -86,21 +86,27 @@
             <h2>Our Projects</h2>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
             <div class="container">
-                <div class="row">
+                <div class="row" style="padding-bottom: 10;">
                   <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 15%;">
                     <a href="projects/alemany-farms.html">
                         <img src="assets/img/alemany farm rect.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);" alt="Alemany Farm">
                     </a>
+                    </div>
                   </div>
                   <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 15%;">
                     <a href="projects/communitycafe.html">
                         <img src="assets/img/community cafe final.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
+                    </div>
                   </div>
                   <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 15%;">
                     <a href="projects/netic.html">
                         <img src="assets/img/neomotion rect.svg" class="project-tile" alt="Netic Health" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
+                    </div>
                   </div>
                     <div class="col-6 col-sm-4">
                         <a href="projects/berkeley-student-food-collective.html">
