--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             <h2>Our Projects</h2>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
             <div class="container">
-                <div class="row" style="padding-bottom: 10;">
+                <div class="row">
                   <div class="col-6 col-sm-4">
-                    <div style="padding-bottom: 15%;">
+                    <div style="padding-bottom: 10%;">
                     <a href="projects/alemany-farms.html">
                         <img src="assets/img/alemany farm rect.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);" alt="Alemany Farm">
                         <div class="proj-title">alemany farm</div>
@@ -95,7 +95,7 @@
                     </div>
                   </div>
                   <div class="col-6 col-sm-4">
-                    <div style="padding-bottom: 15%;">
+                    <div style="padding-bottom: 10%;">
                     <a href="projects/communitycafe.html">
                         <img src="assets/img/community cafe final.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                         <div class="proj-title">community cafe</div>
@@ -103,7 +103,7 @@
                     </div>
                   </div>
                   <div class="col-6 col-sm-4">
-                    <div style="padding-bottom: 15%;">
+                    <div style="padding-bottom: 10%;">
                     <a href="projects/netic.html">
                         <img src="assets/img/neomotion rect.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                         <div class="proj-title">netic health</div>
@@ -111,23 +111,29 @@
                     </div>
                   </div>
                     <div class="col-6 col-sm-4">
+                        <div style="padding-bottom: 10%;">
                         <a href="projects/berkeley-student-food-collective.html">
                             <img src="assets/img/berkeley-food-icon (1)-01.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
                             alt="Berkeley Student Food Collective">
                             <div class="proj-title">berkeley student food collective</div>
                         </a>
+                        </div>
                     </div>
                     <div class="col-6 col-sm-4">
+                        <div style="padding-bottom: 10%;">
                         <a href="projects/makerspace.html">
                             <img src="assets/img/makerspace-icon (1)-01.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                             <div class="proj-title">moffit makerspace</div>
                         </a>
+                        </div>
                     </div>
                     <div class="col-6 col-sm-4">
+                        <div style="padding-bottom: 10%;">
                         <a href="projects/groupsource.html">
                             <img src="assets/img/groupsource-icon-01.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                             <div class="proj-title">groupsource</div>
                         </a>
+                        </div>
                     </div>
                 </div>
               </div>
